--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,8 @@
     "jwt-decode": "^2.2.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
+    "react-router-dom": "^4.3.1",
+    "redux-logger": "^3.0.6",
     "react-redux": "^6.0.0",
     "react-responsive-carousel": "^3.1.46",
     "react-scripts": "2.1.3",
