--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "mongoose": "^5.4.8",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
+    "unique-random": "^2.0.0",
     "validator": "^10.11.0"
   },
   "devDependencies": {
