--- a/client/package.json
+++ b/client/package.json
@@ -18,13 +18,19 @@
     "react-scripts": "2.1.3",
     "redux": "^4.0.1",
     "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "stylelint": "^9.10.1",
+    "stylelint-config-standard": "^18.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "scss": "stylelint '**/*.scss'"
+  },
+  "stylelint": {
+    "extends": "stylelint-config-standard"
   },
   "eslintConfig": {
     "extends": "react-app"
