--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
   },
   "devDependencies": {
     "concurrently": "^4.1.0",
-    "eslint": "^5.13.0",
+    "eslint": "5.6.0",
     "eslint-config-airbnb": "^17.1.0",
     "nodemon": "^1.18.9"
   }
