--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
   },
   "devDependencies": {
     "concurrently": "^4.1.0",
+    "eslint": "5.6.0",
+    "eslint-config-airbnb": "^17.1.0",
     "nodemon": "^1.18.9"
   }
 }
