--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "nodemailer": "^5.1.1",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
     "unique-random": "^2.0.0",
     "validator": "^10.11.0"
   },
