--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "@fortawesome/react-fontawesome": "^0.1.4",
     "axios": "^0.18.0",
     "classnames": "^2.2.6",
+    "immutable": "^4.0.0-rc.12",
     "jwt-decode": "^2.2.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
@@ -18,6 +19,7 @@
     "react-scripts": "2.1.3",
     "redux": "^4.0.1",
     "redux-form": "^8.1.0",
+    "redux-immutable": "^4.0.0",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
     "stylelint": "^9.10.1",
