--- a/client/package.json
+++ b/client/package.json
@@ -13,10 +13,12 @@
     "jwt-decode": "^2.2.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
+    "react-input-range": "^1.3.0",
     "react-redux": "^6.0.0",
     "react-responsive-carousel": "^3.1.46",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3",
+    "react-select": "^2.4.1",
     "redux": "^4.0.1",
     "redux-form": "^8.1.0",
     "redux-immutable": "^4.0.0",
