--- a/client/package.json
+++ b/client/package.json
@@ -33,7 +33,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "scss": "stylelint '**/*.scss'"
+    "scss": "stylelint '**/*.scss' --fix"
   },
   "stylelint": {
     "extends": "stylelint-config-standard"
