--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "classnames": "^2.2.6",
     "immutable": "^4.0.0-rc.12",
     "jwt-decode": "^2.2.0",
+    "prop-types": "^15.7.2",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-input-range": "^1.3.0",
@@ -32,7 +33,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "scss": "stylelint '**/*.scss'"
+    "scss": "stylelint '**/*.scss' --fix"
   },
   "stylelint": {
     "extends": "stylelint-config-standard"
