--- a/client/package.json
+++ b/client/package.json
@@ -33,7 +33,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "scss": "stylelint '**/*.scss' --fix"
+    "scss": "stylelint '**/*.scss' --fix",
+    "flow": "flow"
   },
   "stylelint": {
     "extends": "stylelint-config-standard"
@@ -48,6 +49,7 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "flow-bin": "^0.93.0",
     "node-sass": "^4.11.0"
   }
 }
