--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,6 @@
     "classnames": "^2.2.6",
     "immutable": "^4.0.0-rc.12",
     "jwt-decode": "^2.2.0",
-    "prop-types": "^15.7.2",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-input-range": "^1.3.0",
@@ -33,7 +32,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "scss": "stylelint '**/*.scss' --fix"
+    "scss": "stylelint '**/*.scss' --fix",
+    "flow": "flow"
   },
   "stylelint": {
     "extends": "stylelint-config-standard"
@@ -48,6 +48,7 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "flow-bin": "^0.93.0",
     "node-sass": "^4.11.0"
   }
 }
