--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "unique-random": "^2.0.0",
-    "validator": "^10.11.0"
+    "validator": "^10.11.0",
+    "handlebars": "latest"
   },
   "devDependencies": {
     "concurrently": "^4.1.0",
