--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "jwt-decode": "^2.2.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
+    "react-helmet": "^5.2.0",
     "react-input-range": "^1.3.0",
     "react-redux": "^6.0.0",
     "react-responsive-carousel": "^3.1.46",
