--- a/client/package.json
+++ b/client/package.json
@@ -4,40 +4,38 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.14",
-    "@fortawesome/free-solid-svg-icons": "^5.7.1",
-    "@fortawesome/react-fontawesome": "^0.1.4",
-    "axios": "^0.18.0",
-    "classnames": "^2.2.6",
-    "immutable": "^4.0.0-rc.12",
-    "jwt-decode": "^2.2.0",
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0",
-    "react-helmet": "^5.2.0",
-    "react-input-range": "^1.3.0",
-    "react-redux": "^6.0.0",
-    "react-responsive-carousel": "^3.1.46",
-    "react-router-dom": "^4.3.1",
+    "@fortawesome/fontawesome-svg-core": "1.2.14",
+    "@fortawesome/free-solid-svg-icons": "5.7.1",
+    "@fortawesome/react-fontawesome": "0.1.4",
+    "axios": "0.18.0",
+    "classnames": "2.2.6",
+    "immutable": "4.0.0-rc.12",
+    "jwt-decode": "2.2.0",
+    "react": "16.7.0",
+    "react-dom": "16.7.0",
+    "react-helmet": "5.2.0",
+    "react-input-range": "1.3.0",
+    "react-redux": "6.0.0",
+    "react-responsive-carousel": "3.1.46",
+    "react-router-dom": "4.3.1",
     "react-scripts": "2.1.3",
-    "react-select": "^2.4.1",
-    "redux": "^4.0.1",
-    "redux-form": "^8.1.0",
-    "redux-immutable": "^4.0.0",
-    "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.3.0",
-    "stylelint": "^9.10.1",
-    "stylelint-config-standard": "^18.2.0"
+    "react-select": "2.4.1",
+    "redux": "4.0.1",
+    "redux-form": "8.1.0",
+    "redux-immutable": "4.0.0",
+    "redux-logger": "3.0.6",
+    "redux-thunk": "2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "scss": "stylelint '**/*.scss' --fix",
+    "stylelinter": "stylelint '**/*.scss'",
     "flow": "flow"
   },
   "stylelint": {
-    "extends": "stylelint-config-standard"
+    "extends": "stylelint-config-recommended-scss"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -50,6 +48,9 @@
   ],
   "devDependencies": {
     "flow-bin": "^0.93.0",
-    "node-sass": "^4.11.0"
+    "node-sass": "^4.11.0",
+    "stylelint": "^9.10.1",
+    "stylelint-config-recommended-scss": "^3.2.0",
+    "stylelint-scss": "^3.5.4"
   }
 }
