--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "JS1 final project - creating an e-commerse web shop",
   "main": "server.js",
   "scripts": {
-    "test": "mocha \"./routes/categoryCarousels.test.js\" --timeout 10000",
+    "test": "mocha \"./unittest/categoryCarousels.test.js\" ",
     "server": "nodemon server.js",
     "front": "npm run start --prefix client",
     "dev": "concurrently \"npm run server\"  \"npm run front\""
@@ -36,6 +36,7 @@
   },
   "devDependencies": {
     "chai": "^4.2.0",
+    "chai-as-promised": "^7.1.1",
     "chai-http": "^4.2.1",
     "concurrently": "^4.1.0",
     "eslint": "5.6.0",
