--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "eslint": "5.6.0",
     "eslint-config-airbnb": "^17.1.0",
     "mocha": "^6.0.2",
-    "nodemon": "^1.18.9"
+    "nodemon": "^1.18.9",
+    "supertest": "^3.4.2"
   }
 }
