--- a/client/package.json
+++ b/client/package.json
@@ -47,8 +47,11 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "enzyme": "^3.9.0",
+    "enzyme-adapter-react-16": "^1.10.0",
     "flow-bin": "^0.93.0",
     "node-sass": "^4.11.0",
+    "react-testing-library": "^6.0.0",
     "stylelint": "^9.10.1",
     "stylelint-config-recommended-scss": "^3.2.0",
     "stylelint-scss": "^3.5.4"
