Highlight when search

--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "@fortawesome/fontawesome-svg-core": "1.2.14",
     "@fortawesome/free-solid-svg-icons": "5.7.1",
     "@fortawesome/react-fontawesome": "0.1.4",
+    "autosuggest-highlight": "^3.1.1",
     "axios": "0.18.0",
     "classnames": "2.2.6",
     "immutable": "4.0.0-rc.12",
