--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
   },
   "homepage": "https://github.com/Saribeg/E-Commerse-Online-Shop#readme",
   "dependencies": {
+    "autosuggest-highlight": "^3.1.1",
     "axios": "^0.18.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
+    "handlebars": "latest",
     "jsonwebtoken": "^8.4.0",
     "mongoose": "^5.4.8",
     "nodemailer": "^5.1.1",
@@ -31,8 +33,7 @@
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "unique-random": "^2.0.0",
-    "validator": "^10.11.0",
-    "handlebars": "latest"
+    "validator": "^10.11.0"
   },
   "devDependencies": {
     "chai": "^4.2.0",
