--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "jwt-decode": "2.2.0",
     "react": "16.7.0",
     "react-dom": "16.7.0",
+    "react-dropzone": "6.2.2",
     "react-helmet": "5.2.0",
     "react-input-range": "1.3.0",
     "react-redux": "6.0.0",
@@ -25,7 +26,8 @@
     "redux-form": "8.1.0",
     "redux-immutable": "4.0.0",
     "redux-logger": "3.0.6",
-    "redux-thunk": "2.3.0"
+    "redux-thunk": "2.3.0",
+    "unique-random": "^2.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
