--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "immutable": "4.0.0-rc.12",
     "jwt-decode": "2.2.0",
     "react": "16.7.0",
+    "react-color": "^2.17.0",
     "react-dom": "16.7.0",
     "react-dropzone": "6.2.2",
     "react-helmet": "5.2.0",
