--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "react-dom": "16.7.0",
     "react-dropzone": "6.2.2",
     "react-helmet": "5.2.0",
+    "react-infinite-scroller": "^1.2.4",
     "react-input-range": "1.3.0",
     "react-redux": "6.0.0",
     "react-responsive-carousel": "3.1.46",
