--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "axios": "0.18.0",
     "bcryptjs": "2.4.3",
     "body-parser": "1.18.3",
+    "crypto": "^1.0.1",
     "express": "4.16.4",
     "fs-extra": "^7.0.1",
     "handlebars": "latest",
